* Task 1393.56 * z-index overlay bug of staffselector widget label

--- a/assets/css/panelwidget-staffselector.css
+++ b/assets/css/panelwidget-staffselector.css
@@ -24,7 +24,7 @@
 
 #panelwidget-staffselector .toggleSelect {
 	position:absolute;
-	z-index:1000;
+	z-index:100;
 	right:0;
 	top:0;
 	margin-top:-4px;
